--- a/exerciseDisorder/exerciseDisorder.css
+++ b/exerciseDisorder/exerciseDisorder.css
@@ -1,3 +1,14 @@
+#li_size1 {
+    margin-right: 20px;
+    float: left;
+}
+
+#img_size{
+	width: 180px;
+	height: 250px;
+	object-fit: cover;
+}
+
 #non_touch {
     pointer-events : none;
 }
