--- a/commentPage/style.css
+++ b/commentPage/style.css
@@ -1,15 +1,20 @@
 #comment-input{
     margin-left: 10px;
-    width: 520px;
+    width: 500px;
     height: 60px;
     margin-bottom: 10px;
 }
 
 #submit{
     background-color: rgb(0, 0, 0);
-    width: 100px;
+    width: 80px;
     height: 60px;
     font-size: 15px;
     font-weight: bold;
+    color: aliceblue;
+}
+
+#delete{
+    background-color: rgb(0, 0, 0);
     color: aliceblue;
 }
